<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text=""
        android:textSize="50sp"
        android:textAlignment="center"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <Button
            android:layout_gravity="center"
            android:id="@+id/gen"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/generate"
            android:background="@drawable/rectangle"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/strings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round"
            android:text="@string/strings"
            android:textSize="12sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="10dp"/>



</LinearLayout>